JD: Fixed a alignment issue in devices page

--- a/css/device.css
+++ b/css/device.css
@@ -18,8 +18,10 @@ body {
 }
 
 .promos {
-  max-width: 1140px;
+  max-width: 1019px;
   margin: 0 auto;
+  position: relative;
+  text-align:center;
 }
 
 .promo {
@@ -31,14 +33,17 @@ body {
   line-height: 1.625;
   color: #f9f9f9;
   text-align: center;
+  display:inline-block;
+  margin: 0px;
 }
 @media (min-width: 40em) {
   .promo {
     display: inline;
-    float: left;
     width: 33.333%;
     margin: 1em 0 0;
     border: 1px solid #f6f8f8;
+    display:inline-block;
+    margin: 0px;
   }
   .promo.first {
     border-right: none;
